2008-06-23  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Mark Rowe.

        Restore a collectOnMainThreadOnly call that was accidentally removed in r34659. It will not
        be needed when heaps are actually per-thread, but this isn't the case yet, and collecting
        on a different thread causes crashes.

        * bindings/js/JSDOMBinding.h:
        (WebCore::DOMObject::DOMObject):

2008-06-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

        Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19465
        Bug 19465: Cursor sometimes gets 'stuck' in textareas when trying to navigate with arrow keys

        Test: editing/input/textarea-arrow-navigation.html

        * rendering/RenderText.cpp:
        (WebCore::RenderText::positionForCoordinates): In the case when the next position is to the right
        of the last text box but the text offset is 0, set the affinity to DOWNSTREAM instead of UPSTREAM so
        that the cursor doesn't remain on the previous line.

2008-06-22  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=17421
        Bug 17421: Lack of end tag for SELECT element causes the rest of page to not be rendered

        Test: fast/parser/input-textarea-inside-select-element.html

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::handleError):

2008-06-22  David Krause  <david.krause@gmail.com>

        Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19426
        Bug 19426: LOW_BANDWIDTH_DISPLAY build broken

        Change ref to addClient and deref to removeClient in code wrapped
        by USE(LOW_BANDWIDTH_DISPLAY) to match changes in r31834.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::addLowBandwidthDisplayRequest):
        (WebCore::FrameLoader::removeAllLowBandwidthDisplayRequests):
        (WebCore::FrameLoader::notifyFinished):
